src/styles/ftva/_impact-number-cards.scss
.ftva.impact-number-cards {
    .section-header {
        .section-title {
            @include ftva-h5;
            color: $accent-blue;
        }
        .section-summary {
            @include ftva-body;
            color: $body-grey;
        }
    }
    .impact-number-cards-list {
        gap: 20px 16px;
    }

    @media #{$medium} {
        .impact-number-cards-list {
            align-items: flex-start;
            .flexible-impact-number-card {
                width: calc((100% - 16px) / 2);
            }
        }
    }

    @media #{$small} {
        .impact-number-cards-list {
            display: flex;
            flex-direction: column;

            .flexible-impact-number-card {
                width: 100%;
            }
        }
    }
}

